feat(global): added and implemented service layer
