# src/controllers/books.controller.ts
@@ -1,5 +1,5 @@
 import {Request, Response } from 'express'
-import {BookFindAll, BookFindById, BookCreate, BookDelete} from '../repositories/books.repository.js'
+import { remove, getAll, getById, create } from '../services/books.service.ts';
 
 export async function getBooks(req: Request, res: Response) {
     const { id } = req.params;
@@ -8,7 +8,7 @@ export async function getBooks(req: Request, res: Response) {
         res.status(400).json({ "error": "ID is not a number" })
         return;
     }
-    const bookData = await BookFindById(bookId);
+    const bookData = await getById(bookId);
     
     if (!bookData){
         res.status(404).json({ "error": "Book not found" })
@@ -18,9 +18,20 @@ export async function getBooks(req: Request, res: Response) {
     return
     }
 }
-
+export async function getAllBooks(req: Request, res: Response) {
+    
+    const booksData = await getAll();
+    
+    if (!booksData){
+        res.status(404).json({ "error": "Book not found" })
+        return;
+    } else {
+    res.json(booksData);
+    return
+    }
+}
 export async function postBook(req: Request, res:Response) {
-        const {title, year, author_id} = req.params;
+        const {title, year, author_id} = req.body;
         const yearNum = Number(year);
         const authorIdNum = Number(author_id);
             if (Number.isNaN(yearNum)) {
@@ -30,30 +41,51 @@ export async function postBook(req: Request, res:Response) {
             res.status(400).json({ "error": "Author ID is not a number" })
             return;
         } else {
-        await BookCreate(title, parseInt(year), parseInt(author_id));
-        res.status(201).json("Book created")
-        return
+        const newBookData = await create(title, parseInt(year), parseInt(author_id));
+        if (newBookData === 'AUTHOR_NOT_FOUND'){
+            res.status(404).json({"error": "Author not found"});
+            return;
+        }else {
+            res.status(201).json(newBookData);
+            return;
+        }
         } 
 }
 
 export async function deleteBook(req: Request, res:Response) {
-     const { id } = req.params;
+    const { id } = req.params;
     const bookId = Number(id)
-
+    
     if (Number.isNaN(bookId)) {
         res.status(400).json({ "error": "ID is not a number" })
         return;
     } 
-    const book = await BookFindById(bookId);
-    if (!book){
+    
+    const response = await remove(bookId);
+
+    if (response === "BOOK_NOT_FOUND"){
         res.status(404).json({ "error": "Book not found" })
         return;
-    } else if (!book.available){
+    } else if (response === "HAS_LOANS"){
         res.status(409).json({ "error": "Book has loans" })
         return;
     } else {
-        await BookDelete(bookId);
         res.status(204).send();
         return;
     }
+}
+
+export async function updateBook (req: Request, res: Response) {
+    const {id, data} = req.body;
+    const {data:{ title, year, author_id}} = req.body;
+    if (data.title){
+       const newTitle = title;
+    }
+    if (data.year){
+        const newYear = year;
+    }
+    if (data.author_id){
+        const newAuthorId = author_id;
+    }
+
 }
